готовое и на проверку

--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
             <div class="container employment-partners">
                 <h2 class="title-section">Постоянные клиенты</h2>
                 <ul class="partners">
-                    <li><a href=""><img src="./images/partners/ya&co.svg" alt="" class="yaco"></a></li>
-                    <li><a href=""><img src="./images/partners/tagline_co.svg" alt="" class="tagline"></a></li>
-                    <li><a href=""><img src="./images/partners/company.svg" alt="" class="company"></a></li>
-                    <li><a href=""><img src="./images/partners/foster_peters.svg" alt="" class="foster"></a></li>
-                    <li><a href=""><img src="./images/partners/brand.svg" alt="" class="brand"></a></li>
-                    <li><a href=""><img src="./images/partners/tag_line_co.svg" alt="" class="tag-line"></a></li>
+                    <li class="partners-image"><a href=""><img src="./images/partners/ya&co.svg" alt="" class="yaco"></a></li>
+                    <li class="partners-image"><a href=""><img src="./images/partners/tagline_co.svg" alt="" class="tagline"></a></li>
+                    <li class="partners-image"><a href=""><img src="./images/partners/company.svg" alt="" class="company"></a></li>
+                    <li class="partners-image"><a href=""><img src="./images/partners/foster_peters.svg" alt="" class="foster"></a></li>
+                    <li class="partners-image"><a href=""><img src="./images/partners/brand.svg" alt="" class="brand"></a></li>
+                    <li class="partners-image"><a href=""><img src="./images/partners/tag_line_co.svg" alt="" class="tag-line"></a></li>
                 </ul>
             </div>
         </section>
